Changed icons to use format to support older browsers and set width for icons to fix issue of stretched width on page load

--- a/css/style.css
+++ b/css/style.css
@@ -525,7 +525,8 @@ h1, h2, h3, h4, h5, h6 {
   background-color: white;
   z-index: 999;
   -webkit-transition: all .2s ease .3s;
-  transition: all .2s ease .3s; }
+  transition: all .2s ease .3s;
+  width: 46px; }
   .nav-toggle.rotate--icon {
     transform: rotate(90deg);
     -webkit-transform: rotate(90deg);
@@ -533,7 +534,8 @@ h1, h2, h3, h4, h5, h6 {
     -ms-transform: rotate(90deg);
     background-color: #A09B9B; }
     .nav-toggle.rotate--icon .nav-toggle__icon {
-      color: #40526B; }
+      color: #40526B;
+      width: 30px; }
   .nav-toggle__icon {
     color: #545767;
     font-size: 30px;
